8380901: NOT FOR INTEGRATION OR REVIEW (Draft PR test JEP401)