@@ -39,7 +39,6 @@ import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
-import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
 public class JspawnhelperProtocol {
@@ -56,9 +55,7 @@ public class JspawnhelperProtocol {
         System.out.println("Recursively executing 'JspawnhelperProtocol " + arg + "'");
         Process p = null;
         try {
-            // Route any stdout from the child process - be it jspawnhelper error messages or the output of "/bin/pwd" -
-            // through to the parent process.
-            p = new ProcessBuilder(CMD).inheritIO().start();
+            p = Runtime.getRuntime().exec(CMD);
         } catch (Exception e) {
             // Check that exception contains rich message on failure.
             e.printStackTrace(System.out);
@@ -73,6 +70,12 @@ public class JspawnhelperProtocol {
             System.exit(ERROR + 1);
         }
         if (p.exitValue() == 0) {
+            String pwd = p.inputReader().readLine();
+            String realPwd = Path.of("").toAbsolutePath().toString();
+            if (!realPwd.equals(pwd)) {
+                System.out.println("Child process returned '" + pwd + "' (expected '" + realPwd + "')");
+                System.exit(ERROR + 2);
+            }
             System.out.println("  Successfully executed '" + CMD[0] + "'");
             System.exit(0);
         } else {
@@ -86,6 +89,7 @@ public class JspawnhelperProtocol {
         pb = ProcessTools.createLimitedTestJavaProcessBuilder("-Djdk.lang.Process.launchMechanism=posix_spawn",
                                                               "JspawnhelperProtocol",
                                                               "normalExec");
+        pb.inheritIO();
         Process p = pb.start();
         if (!p.waitFor(TIMEOUT, TimeUnit.SECONDS)) {
             throw new Exception("Parent process timed out");
@@ -93,10 +97,6 @@ public class JspawnhelperProtocol {
         if (p.exitValue() != 0) {
             throw new Exception("Parent process exited with " + p.exitValue());
         }
-        OutputAnalyzer output = new OutputAnalyzer(p);
-        output.shouldContain("Recursively executing 'JspawnhelperProtocol normalExec'");
-        String realPwd = Path.of("").toAbsolutePath().toString();
-        output.shouldContain(realPwd);
     }
 
     private static void simulateCrashInChild(int stage) throws Exception {
@@ -144,7 +144,7 @@ public class JspawnhelperProtocol {
         try (BufferedReader br = p.inputReader()) {
             line = br.readLine();
             while (line != null && !line.startsWith("posix_spawn:")) {
-                System.out.println("parent stdout:" + line);
+                System.out.println(line);
                 line = br.readLine();
             }
         }
