@@ -26,6 +26,7 @@
  * @summary Testing ClassFile Verifier.
  * @bug 8333812 8361526
  * @run junit VerifierSelfTest
+ * @run junit/othervm --enable-preview VerifierSelfTest
  */
 import java.io.IOException;
 import java.lang.classfile.constantpool.PoolEntry;
@@ -216,7 +217,6 @@ class VerifierSelfTest {
                                 cob.iconst_0()
                                    .ifThen(CodeBuilder::nop)
                                    .return_()
-                                   .with(new CloneAttribute(StackMapTableAttribute.of(List.of())))
                                    .with(new CloneAttribute(CharacterRangeTableAttribute.of(List.of())))
                                    .with(new CloneAttribute(LineNumberTableAttribute.of(List.of())))
                                    .with(new CloneAttribute(LocalVariableTableAttribute.of(List.of())))
@@ -336,12 +336,10 @@ class VerifierSelfTest {
                 Wrong Signature attribute length in method ParserVerificationTestClass::m()
                 Wrong Synthetic attribute length in method ParserVerificationTestClass::m()
                 Code attribute in native or abstract method ParserVerificationTestClass::m()
-                Wrong StackMapTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong CharacterRangeTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong LineNumberTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong LocalVariableTable attribute length in Code attribute for method ParserVerificationTestClass::m()
                 Wrong LocalVariableTypeTable attribute length in Code attribute for method ParserVerificationTestClass::m()
-                Multiple StackMapTable attributes in Code attribute for method ParserVerificationTestClass::m()
                 Multiple Signature attributes in Record component c of class ParserVerificationTestClass
                 Wrong Signature attribute length in Record component c of class ParserVerificationTestClass
                 Multiple RuntimeVisibleAnnotations attributes in Record component c of class ParserVerificationTestClass
@@ -423,6 +421,29 @@ class VerifierSelfTest {
         return lst;
     }
 
+    @Test // JDK-8350029
+    void testInvokeSpecialInterfacePatch() {
+        var runClass = ClassDesc.of("Run");
+        var testClass = ClassDesc.of("Test");
+        var runnableClass = Runnable.class.describeConstable().orElseThrow();
+        var chr = ClassHierarchyResolver.of(List.of(), Map.of(runClass, CD_Object))
+                .orElse(ClassHierarchyResolver.defaultResolver()).cached();
+        var context = ClassFile.of(ClassFile.ClassHierarchyResolverOption.of(chr));
+
+        for (var isInterface : new boolean[] {true, false}) {
+            var bytes = context.build(testClass, clb -> clb
+                    .withVersion(JAVA_8_VERSION, 0)
+                    .withSuperclass(runClass)
+                    .withMethodBody("test", MethodTypeDesc.of(CD_void, testClass), ACC_STATIC, cob -> cob
+                            .aload(0)
+                            .invokespecial(runnableClass, "run", MTD_void, isInterface)
+                            .return_()));
+            var errors = context.verify(bytes);
+            assertNotEquals(List.of(), errors, "invokespecial, isInterface = " + isInterface);
+            assertTrue(errors.getFirst().getMessage().contains("interface method to invoke is not in a direct superinterface"), errors.getFirst().getMessage());
+        }
+    }
+
     enum ComparisonInstruction {
         IF_ACMPEQ(Opcode.IF_ACMPEQ, 2),
         IF_ACMPNE(Opcode.IF_ACMPNE, 2),
@@ -486,28 +507,5 @@ class VerifierSelfTest {
                         sink.accept(Arguments.of(inst, kind));
                     }
                 });
-    }
-
-    @Test // JDK-8350029
-    void testInvokeSpecialInterfacePatch() {
-        var runClass = ClassDesc.of("Run");
-        var testClass = ClassDesc.of("Test");
-        var runnableClass = Runnable.class.describeConstable().orElseThrow();
-        var chr = ClassHierarchyResolver.of(List.of(), Map.of(runClass, CD_Object))
-                .orElse(ClassHierarchyResolver.defaultResolver()).cached();
-        var context = ClassFile.of(ClassFile.ClassHierarchyResolverOption.of(chr));
-
-        for (var isInterface : new boolean[] {true, false}) {
-            var bytes = context.build(testClass, clb -> clb
-                    .withVersion(JAVA_8_VERSION, 0)
-                    .withSuperclass(runClass)
-                    .withMethodBody("test", MethodTypeDesc.of(CD_void, testClass), ACC_STATIC, cob -> cob
-                            .aload(0)
-                            .invokespecial(runnableClass, "run", MTD_void, isInterface)
-                            .return_()));
-            var errors = context.verify(bytes);
-            assertNotEquals(List.of(), errors, "invokespecial, isInterface = " + isInterface);
-            assertTrue(errors.getFirst().getMessage().contains("interface method to invoke is not in a direct superinterface"), errors.getFirst().getMessage());
-        }
     }
 }
